--- a/blueprints/scaffold/files/app/templates/show.hbs
+++ b/blueprints/scaffold/files/app/templates/show.hbs
@@ -1,8 +1,8 @@
 <p>
-  {{link-to "<%= camelizedModuleName %> list" "<%= dasherizedModuleNamePlural %>.index" }}
+  {{link-to "<%= classifiedModuleName %> list" "<%= dasherizedModuleNamePlural %>.index" }}
 </p>
 
-<h1><%= camelizedModuleName %> show</h1>
+<h1><%= classifiedModuleName %> show</h1>
 <% attrs.forEach(function(attr) { %>
 <p>
   <strong><%= attr.label %>:</strong>
