--- a/blueprints/scaffold/files/app/templates/__name__/index.hbs
+++ b/blueprints/scaffold/files/app/templates/__name__/index.hbs
@@ -10,14 +10,8 @@
       <th>
         <%= attr.label %>
       </th><% }); %>
-      <th>
-        Edit
-      </th>
-      <th>
-        Show
-      </th>
-      <th>
-        Remove
+      <th colspan="3">
+        Actions
       </th>
     </tr>
     {{#each <%= camelizedModuleName %> in controller}}
