Add span for model attributes

--- a/blueprints/scaffold/files/app/templates/__name__/show.hbs
+++ b/blueprints/scaffold/files/app/templates/__name__/show.hbs
@@ -6,6 +6,6 @@
 <% attrs.forEach(function(attr) { %>
 <p>
   <strong><%= attr.label %>:</strong>
-  {{<%= attr.name %>}}
+  <span>{{<%= attr.name %>}}</span>
 </p>
 <% }); %>
