Change templates to not rely on controller proxing

--- a/blueprints/scaffold/files/app/templates/__name__/-form.hbs
+++ b/blueprints/scaffold/files/app/templates/__name__/-form.hbs
@@ -2,7 +2,7 @@
   <div>
     <label>
       <%= attr.label %>
-      {{input type="text" value=<%= attr.name %>}}
+      {{input type="text" value=model.<%= attr.name %>}}
     </label>
   </div><% }); %>
   <div>
