Fix issues with lastest ember and replace FixtureAdapter by ember-cli-mirage

--- a/blueprints/scaffold-template/files/__root__/__path__/__name__/index.hbs
+++ b/blueprints/scaffold-template/files/__root__/__path__/__name__/index.hbs
@@ -17,7 +17,7 @@
       </tr>
     </thead>
     <tbody>
-      {{#each <%= camelizedModuleName %> in model}}
+      {{#each model as |<%= camelizedModuleName %>|}}
         <tr><% attrs.forEach(function(attr) { %>
           <td>
             {{<%= camelizedModuleName %>.<%= attr.name %>}}
