Destroy records "the Ember way" (#37)
* Destroy records "the Ember way"

* Adapt (ie: fix) unit tests

--- a/blueprints/scaffold-template/files/__root__/__path__/__name__/index.hbs
+++ b/blueprints/scaffold-template/files/__root__/__path__/__name__/index.hbs
@@ -29,7 +29,7 @@
             {{link-to "Show" "<%= dasherizedModuleNamePlural %>.show" <%= camelizedModuleName %>}}
           </td>
           <td>
-            <a href="#" {{action "remove" <%= camelizedModuleName %>}}>Remove</a>
+            {{link-to "Destroy" "<%= dasherizedModuleNamePlural %>.destroy" <%= camelizedModuleName %>}}
           </td>
         </tr>
       {{/each}}
